--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -9,9 +9,9 @@
 %table#movies
   %thead
     %tr
-      %th=link_to 'Movie Title', movies_path(:sort => 'title')
+      %th{:class => @titleHilite}=link_to 'Movie Title', movies_path(:sort => 'title')
       %th Rating
-      %th=link_to 'Release Date', movies_path(:sort => 'date')
+      %th{:class => @dateHilite}=link_to 'Release Date', movies_path(:sort => 'date')
       %th More Info
   %tbody
     - @movies.each do |movie|
